--- a/style.css
+++ b/style.css
@@ -1,13 +1,7 @@
+.x {
+  display: none !important;
+}
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,400;1,800&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-html,
-body {
-  font-family: "Poppins", sans-serif;
-}
 :root {
   --purple: hsl(259, 100%, 65%);
   --light-red: hsl(0, 100%, 67%);
@@ -16,6 +10,15 @@ body {
   --light-grey: hsl(0, 0%, 86%);
   --Smokey-grey: hsl(0, 1%, 44%);
   --off-black: hsl(0, 0%, 8%);
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html,
+body {
+  font-family: "Poppins", sans-serif;
 }
 body {
   background-color: var(--off-white);
@@ -27,13 +30,14 @@ body {
   background-color: var(--White);
   border-radius: 1rem 1rem 10rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  padding: 4rem;
+  padding: 1.5rem;
   margin: 1rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   justify-content: center;
 }
+
 .date {
   display: flex;
   gap: 2rem;
@@ -46,38 +50,102 @@ body {
   color: var(--Smokey-grey);
   text-transform: uppercase;
   margin-bottom: 0.5rem;
+  letter-spacing: 0.25rem;
+  font-size: 0.75rem;
+  font-weight: 700;
 }
 .date-input input {
   border: 1px solid var(--light-grey);
   border-radius: 0.5rem;
-  padding: 1rem;
-  font-weight: 700;
+  padding: 0.75rem 1.25rem;
+  font-weight: 800;
   font-size: 2rem;
   color: var(--off-black);
-  max-width: 150px;
+  max-width: 10rem;
+}
+.date-input .form-text {
+  display: none;
+  margin-top: 12px;
+  font-size: 14px;
+  font-style: italic;
+}
+.error {
+  color: var(--light-red) !important;
+}
+.date-input input:hover,
+.date-input input:focus-visible {
+  outline: 1px solid var(--purple) !important;
+}
+.btn-section {
+  margin: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.btn-section::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: var(--light-grey);
+  z-index: 0;
 }
 .btn {
+  z-index: 1;
   background-color: var(--purple);
   color: var(--White);
   border: none;
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
+  line-height: 1;
+  width: 4rem;
+  height: 4rem;
   font-weight: 400;
   font-size: 4rem;
   cursor: pointer;
-  margin-top: 1rem;
   transition: all 0.3s ease-in-out;
+}
+.btn:hover {
+  background-color: var(--off-black);
+}
+.btn img {
+  padding: 1rem;
+  max-width: 100%;
 }
 .date-display {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 1rem;
-  font-size: 5rem;
+  line-height: 1;
+  letter-spacing: -0.02rem;
+  font-size: 3.5rem;
   font-weight: 800;
   font-style: italic;
+  padding-bottom: 1rem;
 }
 .date-display span {
   color: var(--purple);
+}
+@media screen and (min-width: 768px) {
+  .card {
+    padding: 2rem;
+  }
+  .btn-section {
+    align-items: end;
+    margin: 0;
+  }
+  .date {
+    padding-right: 8rem;
+  }
+  .date-display {
+    font-size: 6.375rem;
+  }
+  .btn {
+    width: 6rem;
+    height: 6rem;
+  }
+  .btn img {
+    padding: 0;
+  }
 }
